--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
+<!DOCTYPE html>
 <html lang="en" id="Html">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Made BY Devil's</title>
+    <title>Made By Devil's</title>
+
+    <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -11,16 +15,21 @@
                 extend: {
                     colors: {
                         clifford: '#da373d',
-                    }
-                }
-            }
+                    },
+                },
+            },
         };
     </script>
+
+    <!-- Custom Styles -->
     <style>
+        /* Global Styles */
         body {
             font-family: Arial, Helvetica, sans-serif;
+            margin: 0;
         }
 
+        /* Fancy Button */
         .fancy-button {
             background: linear-gradient(to right, #38b000, #9ef01a);
             color: white;
@@ -40,234 +49,7 @@
             box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
         }
 
-        .cancelbtn {
-            background-color: #f44336;
-            color: white;
-            font-weight: bold;
-            padding: 12px 24px;
-            border-radius: 25px;
-            border: none;
-            cursor: pointer;
-            transition: all 0.3s ease-in-out;
-        }
-
-        .cancelbtn:hover {
-            transform: scale(1.05);
-            background-color: #e53935;
-        }
-
-        .modal {
-            display: none;
-            position: fixed;
-            z-index: 1;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            overflow: auto;
-            background-color: rgba(0, 0, 0, 0.4);
-        }
-
-        .modal-content {
-            background: url('img_avatar2.png') no-repeat center center;
-            background-size: cover;
-            margin: 5% auto;
-            padding: 20px;
-            border: 1px solid #888;
-            width: 80%;
-            border-radius: 15px;
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-        }
-
-        .imgcontainer {
-            text-align: center;
-            margin: 24px 0 12px 0;
-        }
-
-        .avatar {
-            width: 100px;
-            border-radius: 50%;
-        }
-
-        .close {
-            position: absolute;
-            right: 25px;
-            top: 0;
-            color: white;
-            font-size: 35px;
-            font-weight: bold;
-        }
-
-        .close:hover,
-        .close:focus {
-            color: #f44336;
-            cursor: pointer;
-        }
-    </style>
-</head>
-<body class="flex flex-col items-start bg-gray-100 dark:bg-gray-900">
-    <nav id="custom-navbar" class="flex flex-row justify-between w-full h-auto bg-gradient-to-r from-indigo-500 via-sky-500 to-emerald-500 p-4">
-        <div class="flex justify-between items-center w-auto">
-            <span class="px-6 py-2 font-semibold text-xl text-white transition-transform transform hover:-translate-y-1">
-                Mr.Kind
-            </span>
-        </div>
-        <ul class="flex flex-row space-x-4 items-center w-auto">
-            <a href="https://786promax.github.io/rocketfuel.github.io/">
-                <li class="text-white px-3 py-2 rounded hover:bg-orange-500">Home</li>
-            </a>
-            <a href="https://github.com/786promax">
-                <li class="text-white px-3 py-2 rounded hover:bg-orange-500">About Us</li>
-            </a>
-            <a href="https://www.youtube.com/@KurulusOsmanUrduatv">
-                <li class="text-white px-3 py-2 rounded hover:bg-orange-500">Youtube</li>
-            </a>
-            <a href="https://discord.gg/nickuc-com-plugins-527913497435308042">
-                <li class="text-white px-3 py-2 rounded hover:bg-orange-500">Join Us</li>
-            </a>
-        </ul>
-    </nav>
-
-    <style>
-        /* Default styles for the menu */
-        #custom-navbar {
-            display: flex;
-        }
-
-        /* Hide the navigation for screens smaller than 1024px (PC breakpoint) */
-        @media (max-width: 1024px) {
-            #custom-navbar {
-                display: none;
-            }
-        }
-    </style>
-</body>
-
-    <script>
-        (function () {
-            const hamburger = document.getElementById('nav-hamburger');
-            const mobileMenu = document.getElementById('nav-mobileMenu');
-
-            // Toggle the menu on hamburger click
-            hamburger.addEventListener('click', () => {
-                mobileMenu.classList.toggle('hidden');
-            });
-        })();
-    </script>
-</body>
-<div
-    id="profile-card"
-    class="profile-card max-w-2xl mx-4 sm:mx-auto md:mx-auto lg:mx-auto xl:mx-auto mt-16 bg-white transform-gpu transition-transform hover:-translate-y-1 hover:shadow-xl hover:shadow-fuchsia-200 rounded-lg text-gray-900 dark:hover:shadow-green-900 dark:hover:shadow-2xl dark:bg-slate-600">
-    <div class="profile-card-header rounded-t-lg h-32 overflow-hidden">
-        <img class="profile-card-banner object-cover object-center h-60 w-96" src="https://img.freepik.com/free-photo/ultra-detailed-nebula-abstract-wallpaper-4_1562-749.jpg" alt="Nebula">
-    </div>
-    <div class="profile-card-avatar mx-auto w-32 h-32 relative -mt-16 border-4 border-white dark:border-black rounded-full overflow-hidden">
-        <img class="profile-card-image object-cover object-center h-[190px] dark:bg-black -my-9 mx-[1px]" src="Screenshot 2024-12-06 201206.png" alt="Aatif">
-    </div>
-    <div class="profile-card-text text-center mt-2">
-        <h2 class="profile-card-name font-semibold dark:text-gray-50">Aatif</h2>
-        <p class="profile-card-role text-gray-500 dark:text-gray-200">Owner/Developer</p>
-    </div>
-    <ul class="profile-card-stats py-4 mt-2 text-gray-700 flex items-center justify-around">
-        <li class="profile-card-stat flex flex-col items-center justify-around">
-            <img id="profile-user-icon" src="user.svg" alt="User Icon" class="profile-card-icon w-4 text-blue-900 hover:shadow-lg transform-gpu transition-transform hover:-translate-y-1 hover:shadow-green-300">
-            <div class="profile-card-stat-value dark:text-white font-semibold">99+</div>
-        </li>
-        <li class="profile-card-stat flex flex-col items-center justify-between">
-            <img id="profile-train-icon" src="train.svg" alt="Train Icon" class="profile-card-icon w-4 text-blue-900 hover:shadow-lg transform-gpu transition-transform hover:-translate-y-1 hover:shadow-green-300">
-            <div class="profile-card-stat-value dark:text-white font-semibold">99+</div>
-        </li>
-        <li class="profile-card-stat flex flex-col items-center justify-around">
-            <img id="profile-star-icon" src="star.svg" alt="Star Icon" class="profile-card-icon w-4 text-blue-900 hover:shadow-lg transform-gpu transition-transform hover:-translate-y-1 hover:shadow-green-300">
-            <div class="profile-card-stat-value dark:text-white font-semibold">99+</div>
-        </li>
-    </ul>
-</div>
-
-<style>
-    /* Scoped styles for the profile card */
-    #profile-card {
-        max-width: 24rem;
-        margin: 4rem auto;
-        background-color: white;
-        color: #1a202c; /* Tailwind's gray-900 */
-        border-radius: 0.5rem;
-        overflow: hidden;
-        transition: transform 0.3s, box-shadow 0.3s;
-    }
-
-    #profile-card:hover {
-        transform: translateY(-0.25rem);
-        box-shadow: 0px 10px 15px -3px rgba(237, 69, 166, 0.4);
-    }
-
-    #profile-card .profile-card-header img {
-        height: 15rem;
-        width: 100%;
-        object-fit: cover;
-    }
-
-    #profile-card .profile-card-avatar {
-        position: relative;
-        top: -4rem;
-        width: 8rem;
-        height: 8rem;
-        border-radius: 50%;
-        border: 4px solid white;
-        overflow: hidden;
-    }
-
-    #profile-card .profile-card-avatar img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
-
-    #profile-card .profile-card-text h2 {
-        font-size: 1.25rem;
-        font-weight: 600;
-    }
-
-    #profile-card .profile-card-stats {
-        display: flex;
-        justify-content: space-around;
-        padding: 1rem;
-    }
-
-    #profile-card .profile-card-stats li {
-        text-align: center;
-    }
-
-    #profile-card .profile-card-icon {
-        margin-bottom: 0.25rem;
-        transition: transform 0.3s, box-shadow 0.3s;
-    }
-
-    #profile-card .profile-card-icon:hover {
-        transform: translateY(-0.25rem);
-        box-shadow: 0px 5px 10px rgba(0, 255, 0, 0.3);
-    }
-</style>
-</div>
-</body>
-<head>
-    <link rel="stylesheet" href="styles.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modal Login</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #282c34;
-            color: #fff;
-            margin: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-        }
-
+        /* Modal Styles */
         .modal {
             display: none;
             position: fixed;
@@ -305,110 +87,79 @@
         .close:hover {
             color: #000;
         }
-
-        input[type="text"], input[type="password"] {
-            width: 100%;
-            padding: 10px;
-            margin: 8px 0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-
-        .fancy-button {
-            padding: 10px 20px;
-            background-color: #ff7f50;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-weight: bold;
-        }
-
-        .fancy-button:hover {
-            background-color: #ff4500;
-        }
     </style>
-    <script>
-        // Modal Control Functions
-        function showModal() {
-            const modal = document.getElementById('modal');
-            modal.style.display = 'flex'; // Show the modal
-            console.log('Modal opened');
-        }
-
-        function hideModal() {
-            const modal = document.getElementById('modal');
-            modal.style.display = 'none'; // Hide the modal
-            console.log('Modal closed');
-        }
-
-        function redirectToSite(event) {
-            event.preventDefault(); // Prevent form submission
-            const username = document.getElementById('uname').value;
-            const password = document.getElementById('psw').value;
-
-            if (username === 'killman' && password === 'aattiiff') {
-                alert('Login successful!');
-                window.location.href = "https://786promax.github.io/voie.github.io/";
-            } else {
-                alert('Invalid username or password.');
-            }
-        }
-    </script>
 </head>
-<body>
-    <button onclick="showModal()" class="fancy-button">Don't click me</button>
+
+<body class="bg-gray-100 dark:bg-gray-900">
+
+    <!-- Navigation Bar -->
+    <nav class="flex flex-row justify-between w-full h-auto bg-gradient-to-r from-indigo-500 via-sky-500 to-emerald-500 p-4">
+        <div class="flex justify-between items-center">
+            <span class="px-6 py-2 font-semibold text-xl text-white hover:transform hover:-translate-y-1">
+                Mr.Kind
+            </span>
+        </div>
+        <ul class="flex flex-row space-x-4 items-center">
+            <li><a href="https://786promax.github.io/rocketfuel.github.io/" class="text-white px-3 py-2 rounded hover:bg-orange-500">Home</a></li>
+            <li><a href="https://github.com/786promax" class="text-white px-3 py-2 rounded hover:bg-orange-500">About Us</a></li>
+            <li><a href="https://www.youtube.com/@KurulusOsmanUrduatv" class="text-white px-3 py-2 rounded hover:bg-orange-500">Youtube</a></li>
+            <li><a href="https://discord.gg/nickuc-com-plugins-527913497435308042" class="text-white px-3 py-2 rounded hover:bg-orange-500">Join Us</a></li>
+        </ul>
+    </nav>
+
+    <!-- Fancy Button -->
+    <div class="text-center mt-8">
+        <button onclick="showModal()" class="fancy-button">Click Me</button>
+    </div>
 
     <!-- Modal -->
-<div id="custom-modal" class="modal" role="dialog" aria-labelledby="modalTitle" aria-hidden="true">
-    <div class="modal-content">
-        <span onclick="hideModal()" class="close" aria-label="Close">&times;</span>
-        <form onsubmit="redirectToSite(event)">
-            <h2 id="modalTitle">Login</h2>
-            <label for="custom-uname">Username:</label>
-            <input type="text" id="custom-uname" placeholder="Enter Username" required>
+    <div id="custom-modal" class="modal" role="dialog" aria-labelledby="modalTitle" aria-hidden="true">
+        <div class="modal-content">
+            <span onclick="hideModal()" class="close" aria-label="Close">&times;</span>
+            <form onsubmit="redirectToSite(event)">
+                <h2 id="modalTitle" class="text-center font-bold text-xl">Login</h2>
+                <label for="custom-uname">Username:</label>
+                <input type="text" id="custom-uname" placeholder="Enter Username" required class="border w-full p-2 mt-2 mb-4 rounded">
 
-            <label for="custom-psw">Password:</label>
-            <input type="password" id="custom-psw" placeholder="Enter Password" required>
+                <label for="custom-psw">Password:</label>
+                <input type="password" id="custom-psw" placeholder="Enter Password" required class="border w-full p-2 mt-2 mb-4 rounded">
 
-            <button type="submit" class="fancy-button">Login</button>
-        </form>
+                <button type="submit" class="fancy-button w-full">Login</button>
+            </form>
+        </div>
     </div>
-</div>
-</body>
+
     <script>
-    (function () {
-        // Modal Control Functions
-        function showModal() {
+        (function () {
+            // Modal Control Functions
             const modal = document.getElementById('custom-modal');
-            modal.style.display = 'flex'; // Show the modal
-            console.log('Modal opened');
-        }
 
-        function hideModal() {
-            const modal = document.getElementById('custom-modal');
-            modal.style.display = 'none'; // Hide the modal
-            console.log('Modal closed');
-        }
+            window.showModal = function () {
+                modal.style.display = 'flex'; // Show the modal
+                console.log('Modal opened');
+            };
 
-        function redirectToSite(event) {
-            event.preventDefault(); // Prevent form submission
-            const username = document.getElementById('custom-uname').value;
-            const password = document.getElementById('custom-psw').value;
+            window.hideModal = function () {
+                modal.style.display = 'none'; // Hide the modal
+                console.log('Modal closed');
+            };
 
-            if (username === 'killman' && password === 'aattiiff') {
-                alert('Login successful!');
-                window.location.href = "https://786promax.github.io/voie.github.io/";
-            } else {
-                alert('Invalid username or password.');
-            }
-        }
+            window.redirectToSite = function (event) {
+                event.preventDefault(); // Prevent form submission
+                const username = document.getElementById('custom-uname').value;
+                const password = document.getElementById('custom-psw').value;
 
-        // Expose functions to the global scope for button click handlers
-        window.showModal = showModal;
-        window.hideModal = hideModal;
-        window.redirectToSite = redirectToSite;
-    })();
-</script>
+                if (username === 'killman' && password === 'aattiiff') {
+                    alert('Login successful!');
+                    window.location.href = "https://786promax.github.io/voie.github.io/";
+                } else {
+                    alert('Invalid username or password.');
+                }
+            };
+        })();
+    </script>
+</body>
+
 </html>
+
 
